Revert ":bug: overflow"
This reverts commit 0890046c1c8727650d5a467e06226062aa0798f8.

--- a/public/css/underground.css
+++ b/public/css/underground.css
@@ -3,7 +3,6 @@ body {
   background: radial-gradient(circle, rgba(0,55,62,1) 0%, rgba(0,0,0,1) 61%);  
   font-size: 5px;
   margin-top: 0;
-  overflow-y: hidden;
 }
 
 /* Wall header */
